--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.web=error
 logging.level.org.hibernate.SQL=debug
 logging.level.com.money.demo=debug
-logging.file.path=log.txt
+logging.file.path=/Money/logging
 logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
